<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup"
    tools:context=".sign_up">


    <EditText
        android:id="@+id/emaill"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="44dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="#605B5B"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Username" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#595353"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="158dp"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/PasswordAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="138dp"
        android:layout_height="60dp"
        android:layout_marginBottom="178dp"
        android:background="#00FFFFFF"
        android:onClick="singnUpClicked"
        android:text="@string/s_gn_up"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="52dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emaill"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/PasswordAgain"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="129dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#595353"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/signupbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Username" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="143dp"
        android:background="#00FFFFFF"
        android:onClick="backToSign"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#756E6E"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/Password"
        app:layout_constraintEnd_toStartOf="@+id/SignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>