<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spnTest"
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:background="@drawable/spinner_bg"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/questionPicture"
        app:layout_constraintEnd_toEndOf="@+id/questiontext"
        app:layout_constraintStart_toStartOf="@+id/questiontext" />

    <EditText
        android:id="@+id/questiontext"
        android:layout_width="326dp"
        android:layout_height="160dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="Question"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/spnTest"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5" />

    <Button
        android:id="@+id/button"
        android:layout_width="154dp"
        android:layout_height="60dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="134dp"
        android:background="@drawable/custom_button"
        android:onClick="uploadbutton"
        android:text="upload"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionPicture" />

    <Button
        android:id="@+id/questionPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="194dp"
        android:background="@drawable/uploadscreen_picture_button"
        android:onClick="questionview"
        android:text="+ pıcture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spnTest" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="326dp"
        android:layout_height="160dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/questiontext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arkaplan" />

</androidx.constraintlayout.widget.ConstraintLayout>